--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -299,4 +299,7 @@
     <string name="lockscreen_qs_disabled_title">Quick settings on lock screen</string>
     <string name="lockscreen_qs_disabled_summary">Disable quick settings tiles on secured lockscreen</string>
 
+    <!-- SuperSU header name - the app hides itself from launcher based on this resource name being present in com.android.settings -->
+    <string name="supersu_title">SuperSU</string>
+
 </resources>
