--- a/res/values/custom_attrs.xml
+++ b/res/values/custom_attrs.xml
@@ -32,4 +32,11 @@
         <attr name="defaultColorValue" format="integer" />
     </declare-styleable>
 
+    <declare-styleable name="IntervalSeekBar">
+        <attr name="minI" format="float" />
+        <attr name="maxI" format="float" />
+        <attr name="defaultValuePure" format="float" />
+        <attr name="digits" format="integer" />
+    </declare-styleable>
+
 </resources>
