Marshmallow: kill app long press back (2/2)
Conflicts:
	res/values/ras_strings.xml
	res/xml/development_prefs.xml
	src/com/android/settings/DevelopmentSettings.java

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -180,4 +180,8 @@
     <string name="powermenu_lockscreen_title">Power menu on lock screen</string>
     <string name="powermenu_lockscreen_summary">Show power menu on the lock screen</string>
 
+    <!-- Development options - kill app long press back -->
+    <string name="kill_app_longpress_back">Kill app back button</string>
+    <string name="kill_app_longpress_back_summary">Kill the foreground app by long-pressing the back key</string>
+
 </resources>
