--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -68,6 +68,13 @@
             android:summary="@string/status_bar_quick_qs_pulldown_summary"
             android:defaultValue="true" />
 
+        <!-- Heads up -->
+        <com.android.settings.preference.GlobalSettingSwitchPreference
+            android:key="heads_up_notifications_enabled"
+            android:title="@string/heads_up_notifications"
+            android:summaryOn="@string/summary_heads_up_enabled"
+            android:summaryOff="@string/summary_heads_up_disabled" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
