--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -63,4 +63,11 @@
     <string name="display_rotation_180_title">180 degrees</string>
     <string name="display_rotation_270_title">270 degrees</string>
 
+    <!-- Build date -->
+    <string name="build_date">Build date</string>
+    <string name="build_date_default">2014-01-01-0000</string>
+
+    <!-- Model Name -->
+    <string name="model_name">Model name</string>
+
 </resources>
