--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -70,4 +70,7 @@
     <!-- Model Name -->
     <string name="model_name">Model name</string>
 
+    <!-- Dev Options Enabled by Default -->
+    <string name="show_dev_already_enabled">No Need, Development settings are enabled by default.</string>
+
 </resources>
