--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -21,6 +21,12 @@
         <PreferenceScreen android:key="beltz_logo"
                 android:layout="@layout/about_logo_row" />
 
+        <!-- Changelog -->
+        <PreferenceScreen android:key="changelog"
+                android:title="@string/changelog_title"
+                android:summary="@string/changelog_summary"
+                android:fragment="com.android.settings.custom.Changelog" />
+
         <!-- Device status - launches activity -->
         <PreferenceScreen android:key="status_info"
                 android:title="@string/device_status"
