--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -68,6 +68,12 @@
             android:summary="@string/status_bar_quick_qs_pulldown_summary"
             android:defaultValue="true" />
 
+   	<com.android.settings.preference.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_gesture"
+            android:title="@string/double_tap_to_sleep_title"
+            android:summary="@string/double_tap_to_sleep_summary"
+            android:defaultValue="false" />
+
         <!-- Heads up -->
         <com.android.settings.preference.GlobalSettingSwitchPreference
             android:key="heads_up_notifications_enabled"
