--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -19,9 +19,24 @@
     <string name="header_category_custom">Custom settings</string>
     <string name="custom_settings_title">Tweaks</string>
     <string name="status_bar_title">Status bar</string>
+    <string name="status_bar_clock_title">Clock settings</string>
+    <string name="misc_title">Miscellaneous settings</string>
 
     <!-- Status bar quick qs pulldown -->
     <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
     <string name="status_bar_quick_qs_pulldown_summary">Right edge of the status bar pulls down Quick Settings</string>
+
+    <!-- Status bar - Clock -->
+    <string name="status_bar_clock_style_title">Clock style</string>
+    <string name="status_bar_clock_style_right">Right</string>
+    <string name="status_bar_clock_style_left">Left</string>
+    <string name="status_bar_clock_style_center">Center</string>
+    <string name="status_bar_clock_style_hidden">Hidden</string>
+
+    <string name="status_bar_am_pm_title">AM/PM style</string>
+    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
+    <string name="status_bar_am_pm_normal">Normal</string>
+    <string name="status_bar_am_pm_small">Small</string>
+    <string name="status_bar_am_pm_hidden">Hidden (default)</string>
 
 </resources>
