--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -554,4 +554,9 @@
     <string name="doze_notification_color_invert_summary_off">Doze notifications will not be inverted. Use for dark themes</string>
     <string name="doze_notification_color_invert_summary_on">Doze notifications will be inverted. Use for light/stock theme</string>
 
+    <!-- Linked / unlinked notification volume -->
+    <string name="link_volume_option_title">Link ring and notification volume</string>
+    <string name="notification_volume_option_title">Notification volume</string>
+    <string name="ring_notification_volume_option_title">Ring and notification volume</string>
+
 </resources>
