--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -57,6 +57,17 @@
         android:summary="@string/volume_keys_control_media_stream_summary"
         android:defaultValue="false" />
 
+        <!-- Increasing ring -->
+        <com.android.settings.preference.SystemSettingSwitchPreference
+                android:key="increasing_ring"
+                android:title="@string/increasing_ring_volume_option_title" />
+
+        <!-- Increasing ring volume -->
+        <com.android.settings.notification.IncreasingRingVolumePreference
+                android:key="increasing_ring_volume"
+                android:icon="@drawable/ring_notif_increasing"
+                android:dependency="increasing_ring" />
+
         <!-- Also vibrate for calls -->
         <SwitchPreference
                 android:key="vibrate_when_ringing"
