Disable/Enable screenshot sound [2/2]
Change-Id: If254407c43fbcd70c1fafce244686f07b20864b7

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -90,4 +90,7 @@
     <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
     <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
 
+    <!-- Screenshot sound -->
+    <string name="screenshot_sound_title">Screenshot sound</string>
+
 </resources>
