InstalledApp: show link to Google Play
Adapted for Nougat

Shows a Google Play store icon in the App Info actionbar of apps
Excludes aosp built ones, but still works for apps generally found in /system, like SuperSU

The openPlayStore() code was created by @nicholaschum for Substratum, thank you!

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -533,4 +533,7 @@
     <string name="status_bar_beltz_logo_title">Beltz logo</string>
     <string name="status_bar_beltz_logo_summary">Enable to show Beltz logo on the left side of the statusbar</string>
 
+   <!-- App details: open play store link if app is user installed -->
+   <string name="app_play_store">Google Play</string>
+
 </resources>
