--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -82,6 +82,12 @@
             android:summaryOff="@string/summary_heads_up_disabled" />
 
         <PreferenceScreen
+            android:key="network_traffic_state"
+            android:fragment="com.android.settings.NetworkTraffic"
+            android:summary="@string/network_traffic_summary"
+            android:title="@string/network_traffic_title" />
+
+        <PreferenceScreen
             android:key="systemui_tuner_statusbar"
             android:title="@string/systemui_tuner_statusbar_title"
             android:summary="@string/systemui_tuner_statusbar_summary" >
