Move original "SystemUI Tuner" options under System UI settings (… …2/2)
Credits to Alex Cruz (Mazda) & Dirty-Unicorns

I took some code from this commit:

Break SystemUI Tuner into two parts [2/2]
Change-Id: I7715b0377b9428e953817bade5268ed29c991d73
DirtyUnicorns/android_packages_apps_DU-Tweaks@9163cee

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -93,4 +93,11 @@
     <!-- Screenshot sound -->
     <string name="screenshot_sound_title">Screenshot sound</string>
 
+    <!-- SystemUI Tuner Parts -->
+    <string name="systemui_tuner_statusbar_title">Status bar items</string>
+    <string name="systemui_tuner_statusbar_summary">Show/hide status bar items</string>
+    <string name="systemui_tuner_navbar_title">Navigation bar items</string>
+    <string name="systemui_tuner_navbar_summary">Edit navigation bar items</string>
+    <string name="systemui_tuner_other_title">Other</string>
+
 </resources>
