--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -533,4 +533,7 @@
    <!-- App details: open play store link if app is user installed -->
    <string name="app_play_store">Google Play</string>
 
+    <!-- Substratum dashboard -->
+    <string name="substratum_title">Substratum</string>
+
 </resources>
