Add Substratum dashboard tile
PS2: Change package detection logic

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -305,4 +305,7 @@
     <!-- Superuser header name - the app hides itself from launcher based on this resource name being present in com.android.settings -->
     <string name="superuser_title">Superuser</string>
 
+    <!-- Substratum header name -->
+    <string name="substratum_settings_title">Substratum</string>
+
 </resources>
