--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -100,13 +100,16 @@
     <string name="systemui_tuner_navbar_summary">Edit navigation bar items</string>
     <string name="systemui_tuner_other_title">Other</string>
 
-    <!-- Dashboard suggestions -->
+    <!-- Dashboard options -->
     <string name="dashboard_category">Dashboard options</string>
     <string name="dashboard_suggestions_title">Dashboard suggestions</string>
     <string name="summary_dashboard_suggestions_enabled">Dashboard suggestions are enabled</string>
     <string name="summary_dashboard_suggestions_disabled">Dashboard suggestions are disabled</string>
     <string name="remove_tile_summaries_title">Remove tile summaries</string>
     <string name="remove_tile_summaries_summary">Remove tiles summaries that display underneath tile titles</string>
+    <string name="dashboard_conditions_title">Dashboard conditions</string>
+    <string name="summary_dashboard_conditions_enabled">Dashboard conditions are enabled</string>
+    <string name="summary_dashboard_conditions_disabled">Dashboard conditions are disabled</string>
 
     <!-- Volume button orientation based on current rotation -->
     <string name="advanced_category">Advanced</string>
