Hide power menu on lockscreen [1/2]

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -172,4 +172,8 @@
     <string name="force_expanded_notifications_title">Force Expanded Notifications</string>
     <string name="force_expanded_notifications_summary">Available only for apps that support expanded notifications</string>
 
+    <!-- Hide power menu -->
+    <string name="powermenu_lockscreen_title">Power menu on lock screen</string>
+    <string name="powermenu_lockscreen_summary">Show power menu on the lock screen</string>
+
 </resources>
