--- a/res/xml/custom_settings.xml
+++ b/res/xml/custom_settings.xml
@@ -20,14 +20,106 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/custom_settings_title">
 
-    <PreferenceScreen
-        android:key="status_bar_settings"
-        android:fragment="com.android.settings.custom.StatusBarSettings"
-        android:title="@string/status_bar_title" />
+    <PreferenceCategory
+        android:title="@string/status_bar_clock_title">
 
-    <PreferenceScreen
-        android:key="navigation_bar_settings"
-        android:fragment="com.android.settings.custom.NavigationBarSettings"
-        android:title="@string/navigation_bar_title" />
+        <ListPreference
+            android:key="status_bar_clock"
+            android:title="@string/status_bar_clock_style_title"
+            android:dialogTitle="@string/status_bar_clock_style_title"
+            android:entries="@array/status_bar_clock_style_entries"
+            android:entryValues="@array/status_bar_clock_style_values" />
+
+        <ListPreference
+            android:key="status_bar_am_pm"
+            android:title="@string/status_bar_am_pm_title"
+            android:dialogTitle="@string/status_bar_am_pm_title"
+            android:entries="@array/status_bar_am_pm_entries"
+            android:entryValues="@array/status_bar_am_pm_values" />
+
+        <ListPreference
+            android:key="clock_date_display"
+            android:title="@string/clock_date_display"
+            android:summary="@string/clock_date_display_summary"
+            android:entries="@array/clock_date_display_entries"
+            android:entryValues="@array/clock_date_display_values" />
+
+        <ListPreference
+            android:key="clock_date_style"
+            android:title="@string/clock_date_style"
+            android:entries="@array/clock_date_style_entries"
+            android:entryValues="@array/clock_date_style_values"
+            android:dependency="clock_date_display" />
+
+        <ListPreference
+            android:key="clock_date_format"
+            android:title="@string/clock_date_format"
+            android:entries="@array/clock_date_format_entries_values"
+            android:entryValues="@array/clock_date_format_entries_values"
+            android:dependency="clock_date_display" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/navigation_bar_title">
+
+        <PreferenceScreen
+            android:key="systemui_tuner_navbar"
+            android:title="@string/systemui_tuner_navbar_title"
+            android:summary="@string/systemui_tuner_navbar_summary" >
+            <intent
+                android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.systemui"
+                android:targetClass="com.android.systemui.tuner.NavBarTunerActivity" />
+        </PreferenceScreen>
+
+   	<com.android.settings.preference.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_navbar"
+            android:title="@string/double_tap_sleep_nav_bar_title"
+            android:summary="@string/double_tap_sleep_nav_bar_summary"
+            android:defaultValue="false" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/status_bar_title">
+
+        <com.android.settings.preference.SystemSettingSwitchPreference
+            android:key="status_bar_quick_qs_pulldown"
+            android:title="@string/status_bar_quick_qs_pulldown_title"
+            android:summary="@string/status_bar_quick_qs_pulldown_summary"
+            android:defaultValue="true" />
+
+   	<com.android.settings.preference.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_gesture"
+            android:title="@string/double_tap_to_sleep_title"
+            android:summary="@string/double_tap_to_sleep_summary"
+            android:defaultValue="false" />
+
+        <PreferenceScreen
+            android:key="systemui_tuner_statusbar"
+            android:title="@string/systemui_tuner_statusbar_title"
+            android:summary="@string/systemui_tuner_statusbar_summary" >
+            <intent
+                android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.systemui"
+                android:targetClass="com.android.systemui.tuner.TunerActivity" />
+        </PreferenceScreen>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/misc_title">
+
+        <PreferenceScreen
+            android:key="systemui_tuner_other"
+            android:title="@string/systemui_tuner_other_title" >
+            <intent
+                android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.systemui"
+                android:targetClass="com.android.systemui.tuner.OtherPrefsActivity" />
+        </PreferenceScreen>
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
