--- a/res/xml/custom_settings.xml
+++ b/res/xml/custom_settings.xml
@@ -88,26 +88,11 @@
     <PreferenceCategory
         android:title="@string/navigation_bar_title">
 
-        <PreferenceScreen
-            android:key="systemui_tuner_navbar"
-            android:title="@string/systemui_tuner_navbar_title"
-            android:summary="@string/systemui_tuner_navbar_summary" >
-            <intent
-                android:action="android.intent.action.MAIN"
-                android:targetPackage="com.android.systemui"
-                android:targetClass="com.android.systemui.tuner.NavBarTunerActivity" />
-        </PreferenceScreen>
-
-   	<com.android.settings.preference.SystemSettingSwitchPreference
-            android:key="double_tap_sleep_navbar"
-            android:title="@string/double_tap_sleep_nav_bar_title"
-            android:summary="@string/double_tap_sleep_nav_bar_summary"
-            android:defaultValue="false" />
-
-        <com.android.settings.preference.SecureSettingSwitchPreference
-            android:key="overview_nav_bar_gesture"
-            android:title="@string/overview_nav_bar_gesture"
-            android:summary="@string/overview_nav_bar_gesture_desc" />
+     <Preference
+        android:key="navigation_options"
+        android:fragment="com.dirtyunicorns.dutweaks.fragments.NavbarSettings"
+        android:title="@string/navigationbar_settings_title"
+        android:summary="@string/navigationbar_settings_summary" />
 
     </PreferenceCategory>
 
