Add Phh Superuser dashboard tile credit to @tsubus for his setting dashboard implementation

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -302,4 +302,7 @@
     <!-- SuperSU header name - the app hides itself from launcher based on this resource name being present in com.android.settings -->
     <string name="supersu_title">SuperSU</string>
 
+    <!-- Superuser header name - the app hides itself from launcher based on this resource name being present in com.android.settings -->
+    <string name="superuser_title">Superuser</string>
+
 </resources>
