--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -224,4 +224,8 @@
     <string name="media_art_title">Media cover art</string>
     <string name="media_art_summary">Enable media cover art on the lockscreen</string>
 
+    <!-- Quick settings animation-->
+    <string name="qs_animation_title">Quick settings animation</string>
+    <string name="qs_animation_summary">Enable the nougat quick settings animation</string>
+
 </resources>
