--- a/res/xml/custom_settings.xml
+++ b/res/xml/custom_settings.xml
@@ -85,6 +85,12 @@
         android:title="@string/status_bar_title">
 
         <com.android.settings.preference.SystemSettingSwitchPreference
+            android:key="qs_fancy_animation"
+            android:title="@string/qs_animation_title"
+            android:summary="@string/qs_animation_summary"
+            android:defaultValue="true" />
+
+        <com.android.settings.preference.SystemSettingSwitchPreference
             android:key="status_bar_quick_qs_pulldown"
             android:title="@string/status_bar_quick_qs_pulldown_title"
             android:summary="@string/status_bar_quick_qs_pulldown_summary"
