--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -233,4 +233,20 @@
     <string name="status_bar_battery_percent_title">Battery percent</string>
     <string name="status_bar_battery_percent_summary">Display percent in battery drawable</string>
 
+    <!-- QS settings -->
+    <string name="status_bar_expanded_qs_settings">Quick settings layout</string>
+    <string name="status_bar_expanded_qs_settings_summary">Choose the number of rows and columns</string>
+    <string name="qs_cat_portrait_title">Portrait</string>
+    <string name="qs_cat_landscape_title">Landscape</string>
+    <string name="qs_rows_title">Rows</string>
+    <string name="qs_columns_title">Columns</string>
+    <string name="qs_rows_columns_1_title">1</string>
+    <string name="qs_rows_columns_2_title">2</string>
+    <string name="qs_rows_columns_3_title">3</string>
+    <string name="qs_rows_columns_4_title">4</string>
+    <string name="qs_rows_columns_5_title">5</string>
+    <string name="qs_rows_columns_6_title">6</string>
+    <string name="qs_rows_columns_7_title">7</string>
+    <string name="qs_rows_columns_8_title">8</string>
+
 </resources>
