--- a/res/xml/custom_settings.xml
+++ b/res/xml/custom_settings.xml
@@ -96,12 +96,6 @@
         android:title="@string/status_bar_title">
 
         <com.android.settings.preference.SystemSettingSwitchPreference
-            android:key="qs_fancy_animation"
-            android:title="@string/qs_animation_title"
-            android:summary="@string/qs_animation_summary"
-            android:defaultValue="true" />
-
-        <com.android.settings.preference.SystemSettingSwitchPreference
             android:key="status_bar_quick_qs_pulldown"
             android:title="@string/status_bar_quick_qs_pulldown_title"
             android:summary="@string/status_bar_quick_qs_pulldown_summary"
@@ -127,6 +121,18 @@
 
     <PreferenceCategory
         android:title="@string/misc_title">
+
+        <com.android.settings.preference.SystemSettingSwitchPreference
+            android:key="qs_fancy_animation"
+            android:title="@string/qs_animation_title"
+            android:summary="@string/qs_animation_summary"
+            android:defaultValue="true" />
+
+        <PreferenceScreen
+            android:key="status_bar_expanded_qs_settings"
+            android:title="@string/status_bar_expanded_qs_settings"
+            android:summary="@string/status_bar_expanded_qs_settings_summary"
+            android:fragment="com.pure.settings.fragments.StatusbarExpandedQSSettings" />
 
         <PreferenceScreen
             android:key="systemui_tuner_other"
