--- a/res/xml/custom_settings.xml
+++ b/res/xml/custom_settings.xml
@@ -90,6 +90,11 @@
             android:summary="@string/double_tap_sleep_nav_bar_summary"
             android:defaultValue="false" />
 
+        <com.android.settings.preference.SecureSettingSwitchPreference
+            android:key="overview_nav_bar_gesture"
+            android:title="@string/overview_nav_bar_gesture"
+            android:summary="@string/overview_nav_bar_gesture_desc" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -126,6 +131,11 @@
             android:key="qs_fancy_animation"
             android:title="@string/qs_animation_title"
             android:summary="@string/qs_animation_summary"
+            android:defaultValue="true" />
+
+        <com.android.settings.preference.SecureSettingSwitchPreference
+            android:key="qs_show_brightness"
+            android:title="@string/show_brightness"
             android:defaultValue="true" />
 
         <PreferenceScreen
