--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -267,7 +267,11 @@
     <!-- Do not disturb volume shorcut -->
     <string name="volume_dnd_silent">Volume buttons shortcut</string>
 
-    <!-- Option to show brightness bar in quick settings -->
-    <string name="show_brightness">Show brightness in Quick Settings</string>
+    <!-- Quick Settings brightness slider -->
+    <string name="qs_brightness_slider_title">Brightness slider</string>
+    <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
+
+    <string name="brightness_icon_title">Brightness icon </string>
+    <string name="brightness_icon_summary">Show a brightness icon to the left of the brighness slider to adjust auto-brightness</string>
 
 </resources>
