Port: Wake on plug (2/2)

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -291,4 +291,8 @@
     <string name="volume_keys_control_media_stream_title">Volume keys control media volume</string>
     <string name="volume_keys_control_media_stream_summary">Force volume keys to control media stream</string>
 
+    <!-- wake on plug/unplug -->
+    <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
+    <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>
+
 </resources>
