QS: Bluetooth easy toggle [1/2]

--- a/res/xml/custom_settings.xml
+++ b/res/xml/custom_settings.xml
@@ -139,6 +139,12 @@
             android:defaultValue="false" />
 
         <com.android.settings.preference.SecureSettingSwitchPreference
+            android:key="qs_bt_easy_toggle"
+            android:title="@string/qs_bt_easy_toggle_title"
+            android:summary="@string/qs_bt_easy_toggle_summary"
+            android:defaultValue="false" />
+
+        <com.android.settings.preference.SecureSettingSwitchPreference
             android:key="qs_show_brightness"
             android:title="@string/qs_brightness_slider_title"
             android:summary="@string/qs_brightness_slider_summary"
