--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -513,5 +513,7 @@
     <!-- Tiles settings  -->
     <string name="qs_wifi_easy_toggle_title">WiFi easy toggle</string>
     <string name="qs_wifi_easy_toggle_summary">Enable one tap action to enable or disable WiFi</string>
+    <string name="qs_bt_easy_toggle_title">Bluetooth easy toggle</string>
+    <string name="qs_bt_easy_toggle_summary">Enable one tap action to enable or disable Bluetooth</string>
 
 </resources>
