--- a/res/xml/wireless_settings.xml
+++ b/res/xml/wireless_settings.xml
@@ -90,7 +90,13 @@
         android:title="@string/proxy_settings_title" />
 
     <PreferenceCategory
-        android:title="@string/network_traffic_options_title" />
+        android:title="@string/advanced_options_title" />
+
+     <PreferenceScreen
+        android:fragment="com.pure.settings.fragments.CarrierLabelSettings"
+        android:key="pure_carrier_label_settings"
+        android:title="@string/carrier_label_settings_title"
+        android:summary="@string/carrier_label_settings_summary" />
 
     <PreferenceScreen
         android:key="network_traffic_state"
