--- a/res/xml/battery_saver_settings.xml
+++ b/res/xml/battery_saver_settings.xml
@@ -25,6 +25,12 @@
             android:title="@string/battery_saver_turn_on_automatically_title"
             android:summary="%s" />
 
+    <com.android.settings.preference.SystemSettingSwitchPreference
+        android:key="battery_low_notification"
+        android:title="@string/battery_low_notif_title"
+        android:summary="@string/battery_low_notif_summary"
+        android:defaultValue="true" />
+
     <!-- Feature description text -->
     <com.android.settings.fuelgauge.WallOfTextPreference
             android:key="description"
