Settings: add ability to disable bar color in battery saver mode (2/2)

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -540,4 +540,8 @@
     <string name="battery_low_notif_title">Low battery notification</string>
     <string name="battery_low_notif_summary">Show low battery notification when enabled</string>
 
+    <!-- Battery saver color -->
+    <string name="battery_saver_color_title">Warning color</string>
+    <string name="battery_saver_color_summary">Enable colored bars when battery saver is activated</string>
+
 </resources>
