Add ability to disable ripple when entering lockscreen pin [2/2]

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -562,4 +562,7 @@
     <!-- Lockscreen charging current indicator  -->
     <string name="lockscreen_charging_current_title">Lockscreen charging info</string>
 
+    <!-- Pin ripple -->
+    <string name="lockscreen_pin_ripple_title">Lockscreen PIN ripple</string>
+
 </resources>
