--- a/res/xml/lockscreen_items_settings.xml
+++ b/res/xml/lockscreen_items_settings.xml
@@ -46,4 +46,9 @@
         android:title="@string/lockscreen_charging_current_title"
         android:defaultValue="false" />
 
+    <com.android.settings.preference.SystemSettingSwitchPreference
+        android:key="lockscreen_pin_ripple"
+        android:title="@string/lockscreen_pin_ripple_title"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
