Add ability to disable ripple when entering lockscreen pin [2/2]

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -559,4 +559,7 @@
     <string name="notification_volume_option_title">Notification volume</string>
     <string name="ring_notification_volume_option_title">Ring and notification volume</string>
 
+    <!-- Pin ripple -->
+    <string name="lockscreen_pin_ripple_title">Lockscreen PIN ripple</string>
+
 </resources>
