--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -559,4 +559,7 @@
     <string name="notification_volume_option_title">Notification volume</string>
     <string name="ring_notification_volume_option_title">Ring and notification volume</string>
 
+    <!-- Lockscreen charging current indicator  -->
+    <string name="lockscreen_charging_current_title">Lockscreen charging info</string>
+
 </resources>
