--- a/res/xml/lockscreen_items_settings.xml
+++ b/res/xml/lockscreen_items_settings.xml
@@ -41,4 +41,9 @@
         android:title="@string/lockscreen_alarm_title"
         android:defaultValue="true" />
 
+    <com.android.settings.preference.SystemSettingSwitchPreference
+        android:key="lockscreen_charging_current"
+        android:title="@string/lockscreen_charging_current_title"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
