Custom small QS tiles [2/2]
edit by Mazda-- use custom seekbar instead of list

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -562,4 +562,7 @@
     <string name="increasing_ring_min_volume_title">Start volume</string>
     <string name="increasing_ring_ramp_up_time_title">Ramp-up time</string>
 
+    <!-- Small tiles -->
+    <string name="sysui_qqs_count_title">Small QS tiles</string>
+
 </resources>
