--- a/res/xml/custom_settings.xml
+++ b/res/xml/custom_settings.xml
@@ -163,6 +163,14 @@
             android:summary="@string/qs_animation_summary"
             android:defaultValue="true" />
 
+        <com.dirtyunicorns.dutweaks.preference.CustomSeekBarPreference
+            android:key="sysui_qqs_count_key"
+            android:title="@string/sysui_qqs_count_title"
+            android:max="7"
+            settings:min="3"
+            settings:units=""
+            android:persistent="false" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
