Optional screenshot type [2/2]

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -565,4 +565,9 @@
     <!-- Small tiles -->
     <string name="sysui_qqs_count_title">Small QS tiles</string>
 
+    <!-- Optional screenshot type -->
+    <string name="screenshot_type_title">Screenshot type</string>
+    <string name="screenshot_type_summary_full">Take fullscreen screenshots</string>
+    <string name="screenshot_type_summary_selected">Select which part of the screen you want to screenshot</string>
+
 </resources>
