--- a/res/xml/accessibility_settings.xml
+++ b/res/xml/accessibility_settings.xml
@@ -89,6 +89,13 @@
         android:key="display_category"
         android:title="@string/accessibility_display_title" >
 
+    <com.android.settings.preference.SystemSettingSwitchPreference
+        android:key="screenshot_type"
+        android:title="@string/screenshot_type_title"
+        android:summaryOn="@string/screenshot_type_summary_full"
+        android:summaryOff="@string/screenshot_type_summary_selected"
+        android:defaultValue="true" />
+
         <com.android.settings.preference.SystemSettingSwitchPreference
                 android:key="lockscreen_media_metadata"
                 android:title="@string/media_art_title"
